apps/miniflux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    enable-reloader-operator-watching: "true"
