apps/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  annotations:
    reloader.stakater.com/auto: "false"
    secret.reloader.stakater.com/reload: "miniflux-env"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miniflux
        app.kubernetes.io/component: web
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: miniflux
              app.kubernetes.io/component: web
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534  # nobody
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: miniflux
          image: "docker.io/miniflux/miniflux:2.3.3-distroless"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            exec:
              command:
                - /usr/bin/miniflux
                - -healthcheck
                - auto
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 128Mi
              #   volumeMounts:
              #   - name: cluster-config
              #     mountPath: /etc/localtime
              #     subPath: localtime
              #     readOnly: true
              #   - name: cluster-ca-volume
              #     mountPath: /etc/ssl/cluster/ca.crt
              #     subPath: ca.crt
              # volumes:
              # - name: cluster-config
              #   configMap:
              #     name: cluster-config
              # - name: cluster-ca-volume
              #   secret:
              #     secretName: cluster-ca
