apps/miniflux/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: miniflux-virtualservice
spec:
  hosts:
    - miniflux.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: miniflux-web.miniflux.svc.cluster.local
            port:
              number: 80
